# SDL_Astro

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Check_collision.cpp  Check_collision.h  README.md  enemy.cpp  enemy.h  game.cpp  game.h  main.cpp  player.cpp  player.h  textureManager.cpp  textureManager.h
enemy/: enemy.cpp  enemy.h
game-manager/: Check_collision.cpp  Check_collision.h  game.cpp  game.h  main.cpp  textureManager.cpp
include/: SDL_events.h  SDL_hints.h  SDL_video.h
include/Astro/: Check_collision.h  enemy.h  game.h  player.h  projectiles.h  randomness.h  scoreManager.h  textureManager.h
include/SDL2/: SDL_ttf.h
player/: player.cpp  player.h
projectiles/: projectiles.cpp  projectiles.h
src/: Check_collision.cpp  enemy.cpp  game.cpp  main.cpp  player.cpp  projectiles.cpp  randomness.cpp  scoreManager.cpp  textureManager.cpp
